# SIK-ticketserver

./: .gitignore  CMakeLists.txt  README.md  ticket_server.cpp
testy-zad1-main/: server_wrap.py
